--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,700i" rel="stylesheet">
   
     <!--Favicon-->
-    <link rel="shortcut icon" type="image/png" href="images/fav.png" />
+    <!-- <link rel="shortcut icon" type="image/png" href="images/fav.png" /> -->
     
     
   <!--  ------------------------------------------------------->
